Locations-Hours Spacing fixed

--- a/resources/style.css
+++ b/resources/style.css
@@ -152,7 +152,7 @@ li {
 .location-hours-container {
   display: flex;
   width: 960px;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
